minor changes made to address css validator results during testing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ hr {
 }
 .about-timeline-image {
     border: solid;
-    background-color: #F4A261;
+    background-color: #E76F51;
     border: .5rem solid #F4A261;
     background-size: cover;
     height: 12rem;
