added border radius to equal 0 for contact form fields

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,6 +370,7 @@ textarea {
     padding-right: .5rem;
     border-style:none;
     border-bottom: .1rem solid #96ACB7;
+    border-radius: 0;
 }
 /* Change Autocomplete styling in Chrome*/
 /* adapted from CSS tricks: https://css-tricks.com/snippets/css/change-autocomplete-styles-webkit-browsers/ */
